1.4 Release update